--- a/template/pwa/manifest.json
+++ b/template/pwa/manifest.json
@@ -2,27 +2,27 @@
     "name": "Escape-c",
     "short_name": "Escape-c",
     "icons": [{
-    "src": "images/hello-icon-128.png",
+    "src": "images/esc-icon-128.png",
     "sizes": "128x128",
     "type": "image/png"
     }, {
-    "src": "images/hello-icon-144.png",
+    "src": "images/esc-icon-144.png",
     "sizes": "144x144",
     "type": "image/png"
     }, {
-    "src": "images/hello-icon-152.png",
+    "src": "images/esc-icon-152.png",
     "sizes": "152x152",
     "type": "image/png"
     }, {
-    "src": "images/hello-icon-192.png",
+    "src": "images/esc-icon-192.png",
     "sizes": "192x192",
     "type": "image/png"
     }, {
-    "src": "images/hello-icon-256.png",
+    "src": "images/esc-icon-256.png",
     "sizes": "256x256",
     "type": "image/png"
     }, {
-    "src": "images/hello-icon-512.png",
+    "src": "images/esc-icon-512.png",
     "sizes": "512x512",
     "type": "image/png"
     }],
